Collect FROM_CPU registers into arrays

--- a/esp32/svd/patches/esp32.yaml
+++ b/esp32/svd/patches/esp32.yaml
@@ -289,3 +289,5 @@ DPORT:
       name: CORE_0_INTR_STATUS%s
     APP_INTR_STATUS_*:
       name: CORE_1_INTR_STATUS%s
+
+  _include: ../../../common_patches/sw_interrupts.yaml
