--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -485,3 +485,6 @@ APB_CTRL:
 
 RNG:
   _include: ../../../common_patches/rng.yaml
+
+SYSTEM:
+  _include: ../../../common_patches/sw_interrupts.yaml
