Clusterify PMS DMA_APBPERI registers

--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -488,3 +488,11 @@ RNG:
 
 SYSTEM:
   _include: ../../../common_patches/sw_interrupts.yaml
+
+SENSITIVE:
+  _cluster:
+    DMA_APBPERI%s:
+      DMA_APBPERI*_PMS_CONSTRAIN_0:
+        name: PMS_CONSTRAIN_0
+      DMA_APBPERI*_PMS_CONSTRAIN_1:
+        name: PMS_CONSTRAIN_1
