--- a/esp32c3/svd/patches/esp32c3.yaml
+++ b/esp32c3/svd/patches/esp32c3.yaml
@@ -301,3 +301,11 @@ SYSTEM:
         name: I2S0_RST
 
   _include: ../../../common_patches/sw_interrupts.yaml
+
+SENSITIVE:
+  _cluster:
+    DMA_APBPERI%s:
+      DMA_APBPERI*_PMS_CONSTRAIN_0:
+        name: PMS_CONSTRAIN_0
+      DMA_APBPERI*_PMS_CONSTRAIN_1:
+        name: PMS_CONSTRAIN_1
