--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -497,3 +497,9 @@ SENSITIVE:
         name: PMS_CONSTRAIN_0
       DMA_APBPERI*_PMS_CONSTRAIN_1:
         name: PMS_CONSTRAIN_1
+
+PERI_BACKUP:
+  _array:
+    REG_MAP?:
+      name: REG_MAP%s
+      _strip_end: "0"
