Unify RTC_CNTL STORE registers

--- a/esp32c2/svd/patches/_rtc_cntl.yml
+++ b/esp32c2/svd/patches/_rtc_cntl.yml
@@ -20,3 +20,8 @@ RTC_CNTL:
         bitOffset: 24
         bitWidth: 1
         access: read-write
+
+  # Make sure the STORE registers are the same type
+  _derive:
+    STORE[1-7]:
+      _from: STORE0
