--- a/esp32s2/svd/patches/_rtc_cntl.yml
+++ b/esp32s2/svd/patches/_rtc_cntl.yml
@@ -8,6 +8,11 @@ RTC_CNTL:
     OPTION1:
       name: "OPTIONS1"
 
+  # Make sure the STORE registers are the same type
+  _derive:
+    STORE[1-7]:
+      _from: STORE0
+
   "*":
     _strip: "RTC_"
 
