--- a/esp32s3/svd/patches/_rtc_cntl.yml
+++ b/esp32s3/svd/patches/_rtc_cntl.yml
@@ -3,3 +3,8 @@ RTC_CNTL:
 
   "*":
     _strip: "RTC_"
+
+  # Make sure the STORE registers are the same type
+  _derive:
+    STORE[1-9]:
+      _from: STORE0
