--- a/esp32s3/svd/patches/_rtc_cntl.yml
+++ b/esp32s3/svd/patches/_rtc_cntl.yml
@@ -5,6 +5,10 @@ RTC_CNTL:
     _strip: "RTC_"
 
   # Make sure the STORE registers are the same type
+  STORE0:
+    _modify:
+      "SCRATCH0":
+        name: "DATA"
   _derive:
     STORE[1-9]:
       _from: STORE0
