--- a/esp32/svd/patches/_rtc_cntl.yml
+++ b/esp32/svd/patches/_rtc_cntl.yml
@@ -26,6 +26,10 @@ RTC_CNTL:
       DIV1024: [3, "DIV1024"]
 
   # Make sure the STORE registers are the same type
+  STORE0:
+    _modify:
+      "SCRATCH0":
+        name: "DATA"
   _derive:
     STORE[1-7]:
       _from: STORE0
