--- a/esp32c2/svd/patches/_rtc_cntl.yml
+++ b/esp32c2/svd/patches/_rtc_cntl.yml
@@ -22,6 +22,10 @@ RTC_CNTL:
         access: read-write
 
   # Make sure the STORE registers are the same type
+  STORE0:
+    _modify:
+      "SCRATCH0":
+        name: "DATA"
   _derive:
     STORE[1-7]:
       _from: STORE0
