--- a/esp32c5/svd/patches/esp32c5.yaml
+++ b/esp32c5/svd/patches/esp32c5.yaml
@@ -709,6 +709,10 @@ _modify:
 
 LP_AON:
   # Make sure the STORE registers are the same type
+  STORE0:
+    _modify:
+      "LP_AON_STORE0":
+        name: "DATA"
   _derive:
     STORE[1-9]:
       _from: STORE0
