--- a/esp32c3/svd/patches/_apb_ctrl.yml
+++ b/esp32c3/svd/patches/_apb_ctrl.yml
@@ -12,3 +12,11 @@ APB_CTRL:
       description: "APB_CTRL_PERI_BACKUP_MEM_ADDR_REG"
 
   _strip_end: "_REG"
+
+  _derive:
+    FLASH_ACE[1-3]_ADDR:
+      _from: FLASH_ACE0_ADDR
+    FLASH_ACE[1-3]_ATTR:
+      _from: FLASH_ACE0_ATTR
+    FLASH_ACE[1-3]_SIZE:
+      _from: FLASH_ACE0_SIZE
