--- a/esp32c2/svd/patches/_assist_debug.yml
+++ b/esp32c2/svd/patches/_assist_debug.yml
@@ -28,3 +28,43 @@ ASSIST_DEBUG:
         name: CORE_0_SP_SPILL_MIN_CLR
       CORE_0_AREA_DRAM0_0_WR_CLR:
         name: CORE_0_SP_SPILL_MAX_CLR
+
+  _cluster:
+    CPU%s:
+      dimIncrement: 48
+      CORE_?_DEBUG_MODE:
+        name: DEBUG_MODE
+        _strip: CORE_?_
+      CORE_?_INTR_CLR:
+        name: INTR_CLR
+        _strip: CORE_?_
+      CORE_?_INTR_ENA:
+        name: INTR_ENA
+        _strip: CORE_?_
+      CORE_?_INTR_RAW:
+        name: INTR_RAW
+        _strip: CORE_?_
+      CORE_?_LASTPC_BEFORE_EXCEPTION:
+        name: LASTPC_BEFORE_EXCEPTION
+        _strip: CORE_?_
+      CORE_?_MONTR_ENA:
+        name: MONTR_ENA
+        _strip: CORE_?_
+      CORE_?_RCD_EN:
+        name: RCD_EN
+        _strip: CORE_?_
+      CORE_?_RCD_PDEBUGPC:
+        name: RCD_PDEBUGPC
+        _strip: CORE_?_
+      CORE_?_RCD_PDEBUGSP:
+        name: RCD_PDEBUGSP
+        _strip: CORE_?_
+      CORE_?_SP_MAX:
+        name: SP_MAX
+        _strip: CORE_?_
+      CORE_?_SP_MIN:
+        name: SP_MIN
+        _strip: CORE_?_
+      CORE_?_SP_PC:
+        name: SP_PC
+        _strip: CORE_?_
