--- a/esp32s2/svd/patches/_rtc_cntl.yml
+++ b/esp32s2/svd/patches/_rtc_cntl.yml
@@ -12,3 +12,12 @@ RTC_CNTL:
     _strip: "RTC_"
 
   _strip: "RTC_"
+
+  # Make sure the STORE registers are the same type
+  STORE0:
+    _modify:
+      "SCRATCH0":
+        name: "DATA"
+  _derive:
+    STORE[1-7]:
+      _from: STORE0
