--- a/esp32c3/svd/patches/_rtc_cntl.yml
+++ b/esp32c3/svd/patches/_rtc_cntl.yml
@@ -11,3 +11,12 @@ RTC_CNTL:
   _modify:
     RTC:
       name: RTC_CNTL
+
+  # Make sure the STORE registers are the same type
+  STORE0:
+    _modify:
+      "SCRATCH0":
+        name: "DATA"
+  _derive:
+    STORE[1-7]:
+      _from: STORE0
