--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -1,10 +1,12 @@
 _svd: "../esp32h2.base.svd"
 
 _include:
+  - ../../../common_patches/ieee802154.yaml
   - ../../../common_patches/plic.yaml
   - ../../../common_patches/twai.yaml
   - "_aes.yml"
-  - "_aes.yml"
+  - "_assist_debug.yml"
+  - "_date.yml"
   - "_dma.yml"
   - "_ds.yml"
   - "_ecc.yml"
@@ -931,6 +933,7 @@ INTPRI:
   _array:
     CPU_INT_PRI_*:
       name: CPU_INT_PRI%s
+  _include: ../../../common_patches/sw_interrupts.yaml
 
 PCR:
   _include: ../../../common_patches/pcr.yaml
@@ -1112,9 +1115,6 @@ TWAI0:
     _strip: DATA
     _prefix: TX_BYTE
 
-ASSIST_DEBUG:
-  _include: ../../../common_patches/assist_debug.yaml
-
 RMT:
   SYS_CONF:
     _delete:
@@ -1146,3 +1146,13 @@ I2C_ANA_MST:
   _array:
     I2C?_CTRL: {}
     I2C?_CTRL1: {}
+
+LP_AON:
+  # Make sure the STORE registers are the same type
+  STORE0:
+    _modify:
+      "LP_AON_STORE0":
+        name: "DATA"
+  _derive:
+    STORE[1-9]:
+      _from: STORE0
