--- a/esp32c6/svd/patches/_wdt.yml
+++ b/esp32c6/svd/patches/_wdt.yml
@@ -20,3 +20,9 @@ LP_WDT:
     _modify:
       "LP_WDT_INT_ST":
         name: "WDT_INT_ST"
+  _array:
+    CONFIG[1-4]:
+      name: WDTCONFIG%s
+      _modify:
+        WDT_STG0_HOLD:
+          name: HOLD
